--- a/Lesson02/index.html
+++ b/Lesson02/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://unpkg.com/vue/dist/vue.js"></script>
-	<link href="../css/style.css" rel="stylesheet"> </head>
+	<link href="../css/style.css" rel="stylesheet">
 </head>
 
 <body>
